// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RedButton renders according to snapshot 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "alignSelf": "center",
      "backgroundColor": "#DC0018",
      "borderColor": "#ddd",
      "borderRadius": 3,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginTop": 31.388235294117646,
      "width": "95%",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#DC0018",
        "borderRadius": 3,
        "flex": 1,
        "opacity": 1,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 1,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 3,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontFamily": "roboto_medium",
          "fontSize": 22,
          "fontWeight": "500",
          "paddingVertical": 31.388235294117646,
        }
      }
    >
      TEXT
    </Text>
  </View>
</View>
`;

exports[`RedButton renders according to snapshot if disabled 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "alignSelf": "center",
      "backgroundColor": "#DC0018",
      "borderColor": "#ddd",
      "borderRadius": 3,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginTop": 31.388235294117646,
      "width": "95%",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "lightgray",
        "borderRadius": 3,
        "flex": 1,
        "opacity": 1,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 1,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 3,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontFamily": "roboto_medium",
          "fontSize": 22,
          "fontWeight": "500",
          "paddingVertical": 31.388235294117646,
        }
      }
    >
      TEXT
    </Text>
  </View>
</View>
`;
